# actix_web

auth/cookie-auth/src/: main.rs
auth/redis-session/src/: main.rs
auth/simple-auth-server/: Cargo.toml
auth/simple-auth-server/src/: email_service.rs  invitation_handler.rs  main.rs  models.rs
databases/postgres/: Cargo.toml  README.md
databases/postgres/sql/: add_user.sql  get_users.sql
databases/postgres/src/: main.rs
databases/redis/: 1.env
websockets/chat-broker/src/: main.rs
websockets/chat-tcp/src/: main.rs
websockets/chat/src/: main.rs
websockets/echo/: Cargo.toml
websockets/echo-actorless/src/: handler.rs  main.rs
websockets/echo/src/: client.rs  main.rs  server.rs
websockets/echo/static/: index.html
